src/test/deca/syntax/valid/HelloWorld/Println-FourEscp.deca
// Description:
//    String with triple escape on a quote
//
// Results:
//    \\
//
//
// History:
//    cree le 08/01/2022

{
println("\\\\");
}