src/test/deca/syntax/invalid/HelloWorld/Println-Quotes-OOC.deca
// Description:
//    String with extra quote in front
//
// Results:
//    test_lex : error line 12 on third quote
//
//
// History:
//    cree le 08/01/2022

{
println(""Hello");
}